generate site data pattern data